# PromptLedger-

./: PACKAGING.md  POSITIONING.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: prompt-ci.yml
governance/: governance.yaml
graphrag/: README.md  go.mod
graphrag/cmd/graphrag/: main.go
graphrag/internal/graphx/: graph.go  graph_test.go
graphrag/internal/index/: indexer.go  indexer_test.go
graphrag/internal/llm/: env.go  jsonutil.go  llm.go  openai.go  openai_test.go  stub.go
graphrag/internal/model/: model.go
graphrag/internal/persist/: artifacts.go  artifacts_test.go
graphrag/internal/query/: global.go  global_test.go
prompts/: manifest.yaml
prompts/registry/finance/: transaction_classification.yaml
prompts/registry/legal/: contract_review.yaml
schemas/outputs/finance/: transaction_classification_response.json
schemas/outputs/legal/: contract_review_response.json
src/prompt_ledger/: audit.py  cli.py  load.py  optimization.py  paths.py  promote.py  registry.py  render.py  scenarios.py
tests/: test_smoke.py
tests/fixtures/rag/: finance_policy_chunks.json  legal_policy_chunks.json
tests/scenarios/: finance_tx_classify.yaml  legal_contract_review.yaml
