[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-ledger"
version = "0.1.0"
description = "CI/CD for prompts: audits, RAG correctness tests, and promotion."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.21",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
prompt-ledger = "prompt_ledger.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_ledger"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
